--- a/package.json
+++ b/package.json
@@ -11,13 +11,20 @@
     "eject": "npx expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^5.8.10",
+    "@react-navigation/stack": "^5.12.8",
     "expo": "39.0.5",
     "expo-cli": "4.0.2",
     "expo-constants": "^9.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "0.63.3",
-    "react-native-web": "0.13.7"
+    "react-native-web": "0.13.7",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-screens": "~2.10.1",
+    "react-native-safe-area-context": "3.1.4",
+    "@react-native-community/masked-view": "0.1.10"
   },
   "devDependencies": {
     "babel-preset-expo": "^8.3.0",
